--- a/src/app/components/users/return-request/return-request.component.html
+++ b/src/app/components/users/return-request/return-request.component.html
@@ -98,7 +98,8 @@
                     </table>
                   </div>   
                   <div class="col-9">
-                      <ngb-datepicker #dp [(ngModel)]="model" (navigate)="date = $event.next"></ngb-datepicker><br><br>     
+                    <label>Return date</label><br>
+                      <ngb-datepicker #dp [(ngModel)]="model"></ngb-datepicker><br><br>     
                   </div>
                   <hr>
                 <div class="col pull-right">
